[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "PycoBank"
dynamic = ["version"]
description = "Build and query a local SQLite database from the MycoBank MBList export"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Iván Bloise Sánchez", email = "ibloise62@gmail.com" }]
dependencies = ["openpyxl>=3.1"]
keywords = [
    "biodiversity informatics",
    "fungal nomenclature",
    "fungal taxonomy",
    "mycobank",
    "mycology",
    "sqlite",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.scripts]
pycobank = "pycobank.cli:main"

[project.optional-dependencies]
test = ["coverage[toml]>=7"]

[tool.setuptools.packages.find]
include = ["pycobank*"]

[tool.setuptools.dynamic]
version = { attr = "pycobank.contracts.PACKAGE_VERSION" }

[tool.coverage.run]
branch = true
source = ["pycobank"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
